tdf#139063 crash when add a new sheet to a RTL sheet

Change-Id: Icbfb45036f93ed92e5c83039cd4c3b536f0df0d4